<resources>
    <string name="app_name">CleanSweep</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="register">REGISTER</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="profile_image">Profile Image</string>
    <string name="add_profile_image">Add Profile Image</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="update_profile_image">Update Profile Image</string>
    <string name="update">UPDATE</string>
    <string name="cancel">CANCEL</string>
    <string name="title">Title</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="to">to</string>
    <string name="location">Location</string>
    <string name="join">JOIN</string>
    <string name="post">POST</string>
    <string name="add_photo">Add Photo</string>
    <string name="participants">Participants</string>
</resources>