<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/post_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="200dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/postitem_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#181824"
            android:scaleType="centerCrop"
            android:src="@drawable/googleg_standard_color_18"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postitem_title"
                android:layout_width="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="9dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:id="@+id/postitem_userimage"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/add"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/postitem_username"
                    android:layout_width="wrap_content"
                    android:text="@string/username"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_height="30dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/postitem_starttime"
                    android:layout_width="wrap_content"
                    android:text="@string/start_time"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_height="30dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/to"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/postitem_endtime"
                    android:layout_width="wrap_content"
                    android:text="@string/end_time"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_height="30dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <TextView
                android:id="@+id/postitem_location"
                android:layout_width="wrap_content"
                android:text="@string/location"

                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_gravity="bottom|end">

            <Button
                android:id="@+id/postitem_join"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/join"
                android:textSize="15sp"
                android:layout_gravity="bottom|end" />
        </FrameLayout>
    </FrameLayout>
</LinearLayout>